Links + Descriptions + Media

--- a/PersonalGames/CrushDepth.html
+++ b/PersonalGames/CrushDepth.html
@@ -41,6 +41,9 @@
         <source src="Media/ShowReel.mp4" type="video/mp4">
     </video>
     Crush Depth
+    <div class="storeLinkWrapper">
+        <a class="storeLink itchStoreLink" href="https://alpacasrule.itch.io/crush-depth" target="_blank" rel="noopener noreferrer"></a>
+    </div>
     <div class="gameTypeWrapper">
         <div class="gameType">Unity</div>
         <div class="gameType">C#</div>
@@ -51,6 +54,10 @@
     <div class="sectionTitle">ABOUT CRUSH DEPTH</div>
     <div class="textBlock">
         Crush depth is a first person immersive story game set in the depths of the ocean, created for the 'Cosmic Horror Jam 3'. Players take on the role of a grieving diver, attempting to escape the cluthes of the water depths. The game features atmospheric underwater environments, open exploration, and simulation of submarine mechanics. As players navigate the underwater world, they encounter various challenges and obstacles, avoiding deep sea leviathans while uncovering the mystery behind a cave with a strange biological presence.
+    </div>
+    <div class="sectionTitle">MEDIA</div>
+    <div class="video-wrapper">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/YlyVbTAj-Rc?si=BeP7dwUJz7auCcAF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
     <div class="sectionTitle">GAME JAM RESULTS</div>
     <div class="textBlock">
