--- a/PersonalGames/PersonalJam.html
+++ b/PersonalGames/PersonalJam.html
@@ -51,7 +51,11 @@
 <div class="contentWrapper">
     <div class="sectionTitle">ABOUT PERSONAL JAM</div>
     <div class="textBlock">
-        This page is currently under construction. Please check back later for more information about Personal Jam.
+        Personal game jam is an unnamed game inspired by portal 2. The game features multiple levels of dynamic physics based puzzles, where players must utilise the main mechanic of flinging objects and freezing them mid air, to solve puzzles and progress through the game. A brutalist art style is present throughout the game focusing on large architecture creating a feeling of isolation and loneliness. The game was produced early in my game development journey and was created over the period of 2 weeks.
+    </div>
+    <div class="sectionTitle">MAIN TAKEAWAYS</div>
+    <div class="textBlock">
+        Through this project i got an initial taste of meeting deadlines and working to a schedule. I also learnt alot about puzzle design and how to create interesting and engaging challenges. Additionally I gained experience in player testing and iterating on designs based on feedback. Overall this project was a great learning experience and helped me to develop my skills as a game developer.
     </div>
 </body>
 </html>
