--- a/PersonalGames/TalkingBen.html
+++ b/PersonalGames/TalkingBen.html
@@ -41,6 +41,9 @@
         <source src="Media/ShowReel.mp4" type="video/mp4">
     </video>
     Talking bens revenge
+    <div class="storeLinkWrapper">
+        <a class="storeLink gameJoltStoreLink" href="https://gamejolt.com/games/TalkingBensRevenge/697358" target="_blank" rel="noopener noreferrer"></a>
+    </div>
     <div class="gameTypeWrapper">
         <div class="gameType">Unity</div>                
         <div class="gameType">C#</div>                
@@ -51,7 +54,12 @@
 <div class="contentWrapper">
     <div class="sectionTitle">ABOUT TALKING BEN'S REVENGE</div>
     <div class="textBlock">
-        This page is currently under construction. Please check back later for more information about Talking Ben's Revenge.
+        Talking ben's revenge is a boss fight game created as a fan game for the streamer 'IShowSpeed'. The game capatalised on the talking ben trend that was popular on tiktok at the time. The game has been streamed by IShowSpeed garnering over 1,000,000 views, resulting in 500+ downloads from my GameJolt page. The combat mechanics are simple but enaging, providing a challenging experience to players. Creating and releasing this game gave me a taste of success and motivated me to keep developing games in the future.
+    </div>
+    <div class="sectionTitle">MEDIA</div>
+    <div class="video-wrapper">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/VFlq-S2TpqA?si=eDffzs5zsfi9R9ad" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/TVAOViMVuzk?si=BlcqMwbcBRFzuSfC" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
 </body>
 </html>
