--- a/ProfessionalGames/VolcanoIsland.html
+++ b/ProfessionalGames/VolcanoIsland.html
@@ -41,9 +41,12 @@
         <source src="Media/ShowReel.mp4" type="video/mp4">
     </video>
     Volcano Island
+    <div class="storeLinkWrapper">
+        <a class="storeLink playStoreLink" href="https://play.google.com/store/apps/details?id=com.ozuma.volcanoisland&pcampaignid=web_share" target="_blank" rel="noopener noreferrer"></a>
+    </div>
     <div class="gameTypeWrapper">
-        <div class="gameType">Unity</div>                
-        <div class="gameType">C#</div>                
+        <div class="gameType">Unity</div>
+        <div class="gameType">C#</div>
         <div class="gameType">Android</div>
         <div class="gameType">IOS</div>
     </div>
