--- a/PersonalGames/Dungeon.html
+++ b/PersonalGames/Dungeon.html
@@ -40,18 +40,17 @@
     <video id="showReel" autoplay muted playsinline loop>
         <source src="Media/ShowReel.mp4" type="video/mp4">
     </video>
-    Volcano Island
+    Dungeon Generator
     <div class="gameTypeWrapper">
         <div class="gameType">Unity</div>                
         <div class="gameType">C#</div>                
-        <div class="gameType">Android</div>
-        <div class="gameType">IOS</div>
+        <div class="gameType">PC</div>        
     </div>
 </div>
 <div class="contentWrapper">
     <div class="sectionTitle">ABOUT MY DUNGEON GENERATOR</div>
     <div class="textBlock">
-        This page is currently under construction. Please check back later for more information about my Dungeon Generator.
+        Throughout the years i've been trying to perfect my dungeon generation algorithm, with the goal of creating a system that can produce varied and intersting dungeons in ways that no other dungeon crawler game has achieved. The current iteration of my dungeon generator uses a combination of physics based room placement, backtracking, and convex decomposition (VHACD) to create dungeons that are both interesting to explore and irregular in shape. One of my main focuses was to avoid a grid based system to allow for more organic and varied room shapes, as well as to create a more immersive experience for players.
     </div>
 </body>
 </html>
