--- a/PersonalGames/HumanVariable.html
+++ b/PersonalGames/HumanVariable.html
@@ -44,14 +44,17 @@
     <div class="gameTypeWrapper">
         <div class="gameType">Unity</div>                
         <div class="gameType">C#</div>                
-        <div class="gameType">Android</div>
-        <div class="gameType">IOS</div>
+        <div class="gameType">PC</div>        
     </div>
 </div>
 <div class="contentWrapper">
     <div class="sectionTitle">ABOUT THE HUMAN VARIABLE</div>
     <div class="textBlock">
-        This page is currently under construction. Please check back later for more information about The Human Variable.
+        The human variable is a game with a focus on morals and the psychological aspects of the human experience. Set in a top secret lab, players take on the role of a scientist tasked with experimenting on human test subjects. The protagonist has made a deal with the laboratory to conduct these experiments in exchange for keeping his terminally ill daughter alive. As players progress through the game, they must make difficult decisions that will impact the outcome of the story and the fate of the test subjects. The game features multiple endings based on the choices made by the player, encouraging replayability and exploration of different moral paths.
+    </div>
+    <div class="sectionTitle">HIGHLIGHTED TECH</div>
+    <div class="textBlock">
+        The game features a unique bodily effect system, where each test subject has seperate meshes for each body part (head, torso, arms, legs). This allows for individual body parts to be affected by different status effects, such as burns, cuts, and bruises. The system also includes a pain response mechanic, where test subjects will react differently to pain based on their individual pain tolerance levels, alongside this each subject has a personality system, controlling how they respond to external stimuli. This adds an extra layer of realism and immersion to the game, as players must consider the physical and emotional well-being of their test subjects when conducting experiments. In many cases, test subjects will attempt to directly manipulate the player into making certain choices, adding a psychological element to the gameplay. This system was built from the ground up using C# and Unity, with a focus on modularity and scalability to allow for easy expansion and modification in the future. Another key feature of the game is its ragdoll system, where inmates can transition from an active-ragdoll to an animated agent. This allows for a more realistic and dynamic experience.
     </div>
 </body>
 </html>
