--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
         </div>
         <div class="gameInfoWrapper">
             <div class="gameTitleWrapper">
-                <div class="gameTitle">Prototype dungeon generator</div>
+                <div class="gameTitle">Dungeon generator</div>
             </div>
             <div class ="gameProductionDate">Feb 2024 - Mar 2024</div>
             <div class="gameTagWrapper">
