3D modelling secion + Gallery

--- a/ProfessionalGames/VolcanoIsland.html
+++ b/ProfessionalGames/VolcanoIsland.html
@@ -30,6 +30,7 @@
     Jude Deffee 
     <div class="navButtons">
         <a href="../index.html">Games</a>
+        <a href="../3DModelling.html">3D modelling</a>
     </div>
     <div class="contactWrapper">
         <a href="mailto:judecommerce@outlook.com">Email: judecommerce@outlook.com</a><br>
@@ -55,6 +56,10 @@
     <div class="sectionTitle">ABOUT VOLCANO ISLAND</div>
     <div class="textBlock">
         Volcano island is a sim game with the goal to grow a resort island empire, attracting tourists and managing resources. Players start with a small island and limited funds, gradually expanding their resort by constructing various buildings, amenities, and attractions to entice visitors. The game features a unique island system where players use volcanic eruptions to create new landmasses, adding a strategic layer to island expansion.
+    </div>
+    <div class="sectionTitle">MEDIA</div>
+    <div class="video-wrapper">
+        <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/dYei2CmpvN0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
     <div class="sectionTitle">MY CONTRIBUTIONS</div>
     <div class="textBlock">
