--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
 <div class="topBar">
     Jude Deffee 
     <div class="navButtons">
-        <a href="index.html" class="active">Games</a>        
+        <a href="index.html" class="active">Games</a>   
+        <a href="3DModelling.html">3D modelling</a>
     </div>
     <div class="contactWrapper">
         <a href="mailto:judecommerce@outlook.com">Email: judecommerce@outlook.com</a><br>
