--- a/PersonalGames/DriftRacer.html
+++ b/PersonalGames/DriftRacer.html
@@ -30,6 +30,7 @@
     Jude Deffee 
     <div class="navButtons">
         <a href="../index.html">Games</a>
+        <a href="../3DModelling.html">3D modelling</a>
     </div>
     <div class="contactWrapper">
         <a href="mailto:judecommerce@outlook.com">Email: judecommerce@outlook.com</a><br>
