--- a/ProfessionalGames/KidsGame.html
+++ b/ProfessionalGames/KidsGame.html
@@ -29,7 +29,8 @@
 <div class="topBar">
     Jude Deffee 
     <div class="navButtons">
-        <a href="../index.html">Games</a>        
+        <a href="../index.html">Games</a>   
+        <a href="../3DModelling.html">3D modelling</a>     
     </div>
     <div class="contactWrapper">
         <a href="mailto:judecommerce@outlook.com">Email: judecommerce@outlook.com</a><br>
