--- a/3DModelling.html
+++ b/3DModelling.html
@@ -87,6 +87,7 @@
         <source src="Media/ShowReel.mp4" type="video/mp4">
     </video>
     3D MODELLING
+    <div class="subtitle">Click an image to expand it</div>
     <div class="gameTypeWrapper">
         <div class="gameType">Blender</div>
         <div class="gameType">Unity</div>
@@ -98,6 +99,8 @@
     <div class="sectionTitle">GALLERY</div>
     <div class="galleryGrid">
         <img src="Renders/Human.png" alt="">
+        <img src="Renders/BodyRig.png" alt="">
+        <img src="Renders/HandRig.png" alt="">
         <img src="Renders/BrawlerBlend.png" alt="">
         <img src="Renders/BrawlerUnity.png" alt="">
         <img src="Renders/Underground tunnels2.png" alt="">
