--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
         <source src="Media/ShowReel.mp4" type="video/mp4">
     </video>
     GAMES
+    <div class="subtitle">Click a game to see more details</div>
     <div class="gameTypeWrapper">
         <div class="gameType">Unity</div>
         <div class="gameType">PC</div>
