Loah + DGK added to games

--- a/3DModelling.html
+++ b/3DModelling.html
@@ -98,17 +98,17 @@
 <div class="contentWrapper">
     <div class="sectionTitle">GALLERY</div>
     <div class="galleryGrid">
-        <img src="Renders/Human.png" alt="">
-        <img src="Renders/BodyRig.png" alt="">
+        <img src="Renders/Human.png" alt="">        
         <img src="Renders/HandRig.png" alt="">
         <img src="Renders/BrawlerBlend.png" alt="">
         <img src="Renders/BrawlerUnity.png" alt="">
         <img src="Renders/Underground tunnels2.png" alt="">
+        <img src="Renders/Underground tunnels3.png" alt="">
         <img src="Renders/WizardRend.png" alt="">
-        <img src="Renders/Asahi.png" alt="">
-        <img src="Renders/Machine.png" alt="">
+        <img src="Renders/Asahi.png" alt="">        
         <img src="Renders/Aircon 2.png" alt="">
         <img src="Renders/Lamp post.png" alt="">
+        <img src="Renders/Ivy city2.png" alt="">
         <!-- Add as many as you like -->
     </div>
     <div class="sectionTitle">INSTAGRAM</div>
