--- a/ProfessionalGames/KidsGame.html
+++ b/ProfessionalGames/KidsGame.html
@@ -41,7 +41,7 @@
     <video id="showReel" autoplay muted playsinline loop>
         <source src="Media/ShowReel.mp4" type="video/mp4">
     </video>
-    Unannounced Kids Game
+    Dobble Go Kids!
     <div class="gameTypeWrapper">
         <div class="gameType">Unity</div>                
         <div class="gameType">C#</div>                
