--- a/index.html
+++ b/index.html
@@ -145,6 +145,21 @@
 <div class="gamesSection">
     <div class="sectionTitle">PROFESSIONAL GAMES</div>
     <div class="gameCardWrapper">
+        <div class="gameCard" onclick="location.href='ProfessionalGames/Loah.html';">
+        <div class="gameImage" style="background-image: url(Media/Loah.png);">                 
+        </div>
+        <div class="gameInfoWrapper">
+            <div class="gameTitleWrapper">
+                <div class="gameTitle">Life of a hustler</div>
+            </div>
+            <div class ="gameProductionDate">Jan 2026 - Present</div>
+            <div class="gameTagWrapper">
+                <div class="gameTag">Unity</div>
+                <div class="gameTag">C#</div>                
+                <div class="gameTag">Arcade</div>                
+            </div>
+        </div>      
+    </div>
     <div class="gameCard" onclick="location.href='ProfessionalGames/VolcanoIsland.html';">
         <div class="gameImage" style="background-image: url(Media/VolcanoIsland.png);">            
         </div>
@@ -177,11 +192,11 @@
         </div>      
     </div>
     <div class="gameCard" onclick="location.href='ProfessionalGames/KidsGame.html';">
-        <div class="gameImage" style="background-image: url(Media/Padlock.png);">                 
+        <div class="gameImage" style="background-image: url(Media/DGK.png);">                 
         </div>
         <div class="gameInfoWrapper">
             <div class="gameTitleWrapper">
-                <div class="gameTitle">Unannounced premium kids game</div>
+                <div class="gameTitle">Dobble go kids!</div>
             </div>
             <div class ="gameProductionDate">Nov 2025 - Dec 2025</div>
             <div class="gameTagWrapper">
