--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
         .gameTitle{
             color: white;
-            font-family: Copperplate, Papyrus, fantasy;
+            font-family: fantasy;
             font-size: 30px;
             text-align: center;
             margin: 10px; 
